--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "unique-names-generator": "^4.7.1",
     "uuid": "^9.0.0"
   }
 }
